# linear_histogram_stretching

./: .gitignore  CMakeLists.txt  README.md  main_sample.cpp  main_test.cpp
